# moa_bulk_generator

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  example_config.json  generator.py  pyproject.toml  requirements.txt
config/: config.json
dataset_defs/: __init__.py  dataset_object.py  types.py
input_handling/: __init__.py  file_input_handler.py  interactive_input_handler.py  types.py  utils.py
moa_bulk_generator/: __main__.py  generator.py
moa_bulk_generator/dataset_defs/: dataset_object.py  types.py
moa_bulk_generator/input_handling/: __init__.py  file_input_handler.py  interactive_input_handler.py  types.py  utils.py
moa_bulk_generator/moa_handling/: moa_handler.py  utils.py
moa_handling/: __init__.py  moa_handler.py  utils.py
